--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,14 @@
 bcrypt==4.0.1
-CacheControl==0.12.11
-cachetools==5.3.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.0.1
 click==8.1.3
-cryptography==39.0.0
 Flask==2.2.2
 Flask-Bcrypt==1.0.1
-Flask-SQLAlchemy==3.0.2
-google-api-core==2.11.0
-google-api-python-client==2.74.0
-google-auth==2.16.0
-google-auth-httplib2==0.1.0
-google-cloud-core==2.3.2
-google-cloud-firestore==2.9.1
-google-cloud-storage==2.7.0
-google-crc32c==1.5.0
-google-resumable-media==2.4.1
-googleapis-common-protos==1.58.0
-greenlet==2.0.1
-grpcio==1.51.1
-grpcio-status==1.51.1
-httplib2==0.21.0
-idna==3.4
+Flask-SQLAlchemy==3.0.3
+greenlet==2.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
-msgpack==1.0.4
-proto-plus==1.22.2
-protobuf==4.21.12
 psycopg2-binary==2.9.5
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
 PyJWT==2.6.0
-pyparsing==3.0.9
-requests==2.28.2
-rsa==4.9
-six==1.16.0
-SQLAlchemy==1.4.46
-uritemplate==4.1.1
-urllib3==1.26.14
+SQLAlchemy==2.0.2
+typing_extensions==4.4.0
 Werkzeug==2.2.2
