--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,9 +19,13 @@ services:
 
     ports:
       - 5000:5000
+  
+    volumes:
+      - .:/app
 
     environment:
       DATABASE_URI: postgresql://postgres:gigapollersecret@db:5432/gigapollerdb
+      PYTHONUNBUFFERED: 1
 
     depends_on:
       - db
