--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,6 +21,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           source: "docker-compose.yml"
           target: "/home/${{ secrets.SSH_USER }}/app"
+          tar_exec: "tar czf -"
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1 
