--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,6 +22,7 @@ jobs:
           source: "docker-compose.yml"
           target: "/home/${{ secrets.SSH_USER }}/app"
           tar_exec: "/usr/bin/tar"
+          debug: true
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1 
