--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,18 +12,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+      
       - name: Copy docker-compose.yml to remote server
-        uses: appleboy/scp-action@master
+        uses: wei/rsync@v1
         with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          source: "docker-compose.yml"
-          target: "/home/${{ secrets.SSH_USER }}/app"
-          tar_exec: "/usr/bin/tar"
-          debug: true
-
+            args: -avz --compress-level=9 docker-compose.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_USER }}/app
+            key: ${{ secrets.SSH_KEY }}
+            
       - name: Log in to Docker Hub
         uses: docker/login-action@v1 
         with:
