--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Copy docker-compose.yml to remote server
-        uses: wei/rsync@v1
+        uses: Wei/rsync@v1
         with:
             args: -avz --compress-level=9 docker-compose.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_USER }}/app
             key: ${{ secrets.SSH_KEY }}
