--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,10 +14,12 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Copy docker-compose.yml to remote server
-        uses: Wei/rsync@v1
-        with:
-            args: -avz --compress-level=9 docker-compose.yml ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/${{ secrets.SSH_USER }}/app
-            key: ${{ secrets.SSH_KEY }}
+        run: |
+          echo "yCiJU2qXFC3eiA" > id_rsa
+          chmod 600 id_rsa
+          scp -i id_rsa -o StrictHostKeyChecking=no -C -c aes256-gcm@openssh.com docker-compose.yml root@$139.144.0.51:/home/app
+          rm id_rsa
+
             
       - name: Log in to Docker Hub
         uses: docker/login-action@v1 
